<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/tvExcluir"
            android:textColor="@color/preto"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btSimCherry"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginRight="2sp"
            android:layout_weight="1"
            android:background="@drawable/botao"
            android:text="@string/btSim"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/preto" />

        <Button
            android:id="@+id/btNaoCherry"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:layout_marginLeft="2sp"
            android:layout_weight="1"
            android:background="@drawable/botao"
            android:text="@string/btNao"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/preto" />

    </LinearLayout>

</LinearLayout>