<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    android:orientation="vertical"
    android:padding="10sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSenha"
        android:textColor="@color/preto"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etSenhaApple"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="senha"
        android:background="@drawable/campo"
        android:hint="@string/htSenha"
        android:inputType="text"
        android:maxLength="15"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:textColor="@color/preto"
        android:textCursorDrawable="@drawable/cursor"
        android:textSize="16sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="48sp"
        android:layout_margin="2sp"
        android:background="@drawable/botao"
        android:onClick="abrir_apple"
        android:text="@string/btAbrir"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center"
        android:orientation="vertical">

        <ImageView
            android:onClick="curioso"
            android:id="@+id/tvDroneApple"
            android:layout_width="240px"
            android:layout_height="287px"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="10sp"
            android:background="@drawable/enfeite" />

    </LinearLayout>

</LinearLayout>